--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
 					<span>Our Memories</span>
 					<h2>Wedding Gallery</h2>
-					<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+					<p>The Journey So Far.</p>
 				</div>
 			</div>
 			<div class="row row-bottom-padded-md">
@@ -309,38 +309,38 @@
 						</a>
 					</li>
 
-						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/coup3.JPG); ">
-							<a href="images/coup3.JPG" class="color-3">
-								<div class="case-studies-summary">
-								</div>
-							</a>
-						</li>
-						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/coup4.jpg); ">
-							<a href="images/coup4.jpg" class="color-4">
-								<div class="case-studies-summary">
-								</div>
-							</a>
-						</li>
+					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/coup3.JPG); ">
+						<a href="images/coup3.JPG" class="color-3">
+							<div class="case-studies-summary">
+							</div>
+						</a>
+					</li>
+					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/coup4.jpg); ">
+						<a href="images/coup4.jpg" class="color-4">
+							<div class="case-studies-summary">
+							</div>
+						</a>
+					</li>
 
-						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/coup.jpg); ">
-							<a href="images/coup.jpg" class="color-4">
-								<div class="case-studies-summary">
-								</div>
-							</a>
-						</li>
+					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/coup.jpg); ">
+						<a href="images/coup.jpg" class="color-4">
+							<div class="case-studies-summary">
+							</div>
+						</a>
+					</li>
 
-						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/coup2.JPG); "> 
-							<a href="images/coup2.JPG" class="color-5">
-								<div class="case-studies-summary">
-								</div>
-							</a>
-						</li>
-						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/coup1.JPG); ">
-							<a href="images/coup1.JPG" class="color-6">
-								<div class="case-studies-summary">
-								</div>
-							</a>
-						</li>
+					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/coup2.JPG); "> 
+						<a href="images/coup2.JPG" class="color-5">
+							<div class="case-studies-summary">
+							</div>
+						</a>
+					</li>
+					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/coup1.JPG); ">
+						<a href="images/coup1.JPG" class="color-6">
+							<div class="case-studies-summary">
+							</div>
+						</a>
+					</li>
 					</ul>		
 				</div>
 			</div>
