--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
 						</a>
 					</li>
 
-					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/coup.jpg); ">
+					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-coup.jpg); ">
 						<a href="images/coup.jpg" class="color-4">
 							<div class="case-studies-summary">
 							</div>
