--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
 				<div class="col-md-12 col-md-offset-0">
 					<ul class="timeline animate-box">
 						<li class="animate-box">
-							<div class="timeline-badge" style="background-image:url(images/coup.jpg);"></div>
+							<div class="timeline-badge" style="background-image:url(images/coup.JPG);"></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
 									<h3 class="timeline-title">First We Meet</h3>
@@ -237,7 +237,7 @@
 							</div>
 						</li>
 						<li class="timeline-inverted animate-box">
-							<div class="timeline-badge" style="background-image:url(images/coup2.jpg);"></div>
+							<div class="timeline-badge" style="background-image:url(images/coup2.JPG);"></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
 									<h3 class="timeline-title">In a Relationship</h3>
@@ -250,7 +250,7 @@
 							</div>
 						</li>
 						<li class="animate-box">
-							<div class="timeline-badge" style="background-image:url(images/coup1.jpg);"></div>
+							<div class="timeline-badge" style="background-image:url(images/coup1.JPG);"></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
 									<h3 class="timeline-title">Our First Date</h3>
@@ -282,22 +282,22 @@
 				<div class="col-md-12">
 					<ul id="fh5co-gallery-list">
 						
-						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/coup7.jpg); "> 
-						<a href="images/coup7.jpg">
+						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/coup7.JPG); "> 
+						<a href="images/coup7.JPG">
 							<div class="case-studies-summary">
 							</div>
 						</a>
 					</li>
-					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/coup5.jpg); ">
-						<a href="images/coup5.jpg" class="color-2">
+					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/coup5.JPG); ">
+						<a href="images/coup5.JPG" class="color-2">
 							<div class="case-studies-summary">
 							</div>
 						</a>
 					</li>
 
 
-					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/coup6.jpg); ">
-						<a href="images/coup6.jpg" class="color-3">
+					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/coup6.JPG); ">
+						<a href="images/coup6.JPG" class="color-3">
 							<div class="case-studies-summary">
 							</div>
 						</a>
@@ -315,15 +315,15 @@
 							</div>
 						</a>
 					</li>
-					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/coup4.jpg); ">
-						<a href="images/coup4.jpg" class="color-4">
+					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/coup4.JPG); ">
+						<a href="images/coup4.JPG" class="color-4">
 							<div class="case-studies-summary">
 							</div>
 						</a>
 					</li>
 
-					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-coup.jpg); ">
-						<a href="images/coup.jpg" class="color-4">
+					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/coup.JPG); ">
+						<a href="images/coup.JPG" class="color-4">
 							<div class="case-studies-summary">
 							</div>
 						</a>
