--- a/index.html
+++ b/index.html
@@ -282,22 +282,22 @@
 				<div class="col-md-12">
 					<ul id="fh5co-gallery-list">
 						
-						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/coup7.JPG); "> 
-						<a href="images/coup7.JPG">
+						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/coup7.jpg); "> 
+						<a href="images/coup7.jpg">
 							<div class="case-studies-summary">
 							</div>
 						</a>
 					</li>
-					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/coup5.JPG); ">
-						<a href="images/coup5.JPG" class="color-2">
+					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/coup5.jpg); ">
+						<a href="images/coup5.jpg" class="color-2">
 							<div class="case-studies-summary">
 							</div>
 						</a>
 					</li>
 
 
-					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/coup6.JPG); ">
-						<a href="images/coup6.JPG" class="color-3">
+					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/coup6.jpg); ">
+						<a href="images/coup6.jpg" class="color-3">
 							<div class="case-studies-summary">
 							</div>
 						</a>
