--- a/index.html
+++ b/index.html
@@ -315,8 +315,8 @@
 							</div>
 						</a>
 					</li>
-					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/coup4.JPG); ">
-						<a href="images/coup4.JPG" class="color-4">
+					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/coup4.jpg); ">
+						<a href="images/coup4.jpg" class="color-4">
 							<div class="case-studies-summary">
 							</div>
 						</a>
