--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>V&amp;M &mdash;2024</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Free HTML5 Template by FREEHTML5.CO" />
-	<meta name="keywords" content="free html5, free template, free bootstrap, html5, css3, mobile first, responsive" />
-	<meta name="author" content="FREEHTML5.CO" />
+	<meta name="description" content="Mathew & Toria 2024" />
+	<meta name="keywords" content="Love" />
+	<meta name="author" content="BellaTECH LTD." />
 
   <!-- 
 	//////////////////////////////////////////////////////
@@ -74,31 +74,12 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-xs-2">
-					<div id="fh5co-logo"><a href="index.html">Wedding<strong>.</strong></a></div>
+					<div id="fh5co-logo"><a href="index.html"><strong>V|M 2024</strong></a></div>
 				</div>
 				<div class="col-xs-10 text-right menu-1">
 					<ul>
 						<li class="active"><a href="index.html">Home</a></li>
-						<li><a href="about.html">Story</a></li>
-						<li class="has-dropdown">
-							<a href="services.html">Services</a>
-							<ul class="dropdown">
-								<li><a href="#">Web Design</a></li>
-								<li><a href="#">eCommerce</a></li>
-								<li><a href="#">Branding</a></li>
-								<li><a href="#">API</a></li>
-							</ul>
-						</li>
-						<li class="has-dropdown">
-							<a href="gallery.html">Gallery</a>
-							<ul class="dropdown">
-								<li><a href="#">HTML5</a></li>
-								<li><a href="#">CSS3</a></li>
-								<li><a href="#">Sass</a></li>
-								<li><a href="#">jQuery</a></li>
-							</ul>
-						</li>
-						<li><a href="contact.html">Contact</a></li>
+						<li><a href="#">RSVP</a></li>
 					</ul>
 				</div>
 			</div>
@@ -161,7 +142,7 @@
 		</div>
 	</div>
 
-	<div id="fh5co-event" class="fh5co-bg" style="background-image:url(images/img_bg_3.jpg);">
+	<div id="fh5co-event" class="fh5co-bg" style="background-image:url(images/bgg1.png);">
 		<div class="overlay"></div>
 		<div class="container">
 			<div class="row">
@@ -309,8 +290,8 @@
 						</a>
 					</li>
 
-					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/coup3.JPG); ">
-						<a href="images/coup3.JPG" class="color-3">
+					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/cope.jpg); ">
+						<a href="images/cope.jpg" class="color-3">
 							<div class="case-studies-summary">
 							</div>
 						</a>
@@ -402,7 +383,7 @@
 			</div>
 		</div>
 	</div>
-	<div id="fh5co-started" class="fh5co-bg" style="background-image:url(images/img_bg_4.jpg);">
+	<div id="fh5co-started" class="fh5co-bg" style="background-image:url(images/bgg2.png);">
 		<div class="overlay"></div>
 		<div class="container">
 			<div class="row animate-box">
@@ -449,7 +430,7 @@
 							<li><a href="#"><i class="icon-twitter"></i></a></li>
 							<li><a href="#"><i class="icon-facebook"></i></a></li>
 							<li><a href="#"><i class="icon-linkedin"></i></a></li>
-							<li><a href="#"><i class="icon-dribbble"></i></a></li>
+							<li><a href="#"><i class="icon-instagram"></i></a></li>
 						</ul>
 					</p>
 				</div>
