--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 				<div class="col-md-8 col-md-offset-2 text-center">
 					<div class="display-t">
 						<div class="display-tc animate-box" data-animate-effect="fadeIn">
-							<h1>Mathew &amp; Toria</h1>
+							<h1>Mathew &amp; Toriah</h1>
 							<h2>We Are Getting Married</h2>
 							<div class="simply-countdown simply-countdown-one"></div>
 							<p><a href="#" class="btn btn-default btn-sm">Save the date</a></p>
@@ -159,11 +159,11 @@
 								<div class="event-wrap animate-box">
 									<h3>Wedding Ceremony</h3>
 									<div class="event-col">
-										<i class="icon-clock"></i>
+										<i class="icon-clock" style="color: #F14E95;"></i>
 										<span>10:00 AM</span>
 									</div>
 									<div class="event-col">
-										<i class="icon-calendar"></i>
+										<i class="icon-calendar" style="color: #F14E95;"></i>
 										<span>Saturday 21</span>
 										<span>Dec, 2024</span>
 									</div>
@@ -174,11 +174,11 @@
 								<div class="event-wrap animate-box">
 									<h3>Thanksgiving Mass</h3>
 									<div class="event-col">
-										<i class="icon-clock"></i>
+										<i class="icon-clock" style="color: #F14E95;"></i>
 										<span>08:30 AM</span>
 									</div>
 									<div class="event-col">
-										<i class="icon-calendar"></i>
+										<i class="icon-calendar" style="color: #F14E95;"></i>
 										<span>Sunday 22</span>
 										<span>Dec, 2024</span>
 									</div>
@@ -209,7 +209,7 @@
 							<div class="timeline-panel">
 								<div class="timeline-heading">
 									<h3 class="timeline-title">First We Meet</h3>
-									<span class="date">December 1st, 2020</span>
+									<span class="date" style="color: #F14E95;">December 1st, 2020</span>
 								</div>
 								<div class="timeline-body">
 									<p>Our story began unexpectedly on the 1st of December 2020, during a hilarious Twitter thread that had us both laughing out loud and, unknowingly, inching closer together. 
@@ -222,7 +222,7 @@
 							<div class="timeline-panel">
 								<div class="timeline-heading">
 									<h3 class="timeline-title">In a Relationship</h3>
-									<span class="date">January 14, 2021</span>
+									<span class="date" style="color: #F14E95;">January 14, 2021</span>
 								</div>
 								<div class="timeline-body">
 									<p>After weeks of conversations and growing fondness, we officially began dating on the 17th of January 2021. Despite Mathew’s busy schedule as a producer in a bustling radio house, 
@@ -235,7 +235,7 @@
 							<div class="timeline-panel">
 								<div class="timeline-heading">
 									<h3 class="timeline-title">Our First Date</h3>
-									<span class="date">Febuary 18, 2021</span>
+									<span class="date" style="color: #F14E95;">Febuary 18, 2021</span>
 								</div>
 								<div class="timeline-body">
 									<p>Our first date, on the 21st of February 2021, at Alyce-Ice Ice Cream and Confectionaries, remains one of our fondest memories. Sharing scoops of joy and endless laughter,
@@ -246,7 +246,7 @@
 			    	</ul>
 				</div>
 			</div>
-			<p class="text-center">The journey since has been nothing short of amazing, and we can’t wait to continue building our forever.</p>
+			<p class="text-center">The journey since has been nothing short of amazing,<br> and we can’t wait to continue building our forever.</p>
 		</div>
 	</div>
 
@@ -348,9 +348,13 @@
 										<figure>
 											<img src="images/coup2.jpg" alt="user">
 										</figure>
-										<span>Mathew &amp; Toria <a href="#" class="twitter">2024</a></span>
+										<span style="color: #F14E95;">Mathew To Toria <a href="#" class="twitter"></a></span>
 										<blockquote>
-											<p>""</p>
+											<p>"Victoria, from the moment our paths crossed, my heart knew it had found its home. 
+												Today, I promise to stand by you in every season of life, to celebrate your joys, 
+												and to be your anchor in stormy seas. I vow to love you unconditionally, to cherish 
+												you endlessly, and to walk hand in hand with you, now and forever. You are my heart, 
+												my soul, my everything"</p>
 										</blockquote>
 									</div>
 								</div>
@@ -359,9 +363,12 @@
 										<figure>
 											<img src="images/coup1.jpg" alt="user">
 										</figure>
-										<span>Mathew &amp; Toria  <a href="#" class="twitter">2024</a></span>
+										<span style="color: #F14E95;">Toriah To Mathew <a href="#" class="twitter"></a></span>
 										<blockquote>
-											<p>"."</p>
+											<p>"Matthew, you are my safe haven, my guiding star, and my greatest joy. Today, I promise to love 
+												you with all that I am, to honor the person you are and the dreams we share. I vow to be your 
+												unwavering support, your laughter in the quiet moments, and your partner in every adventure. 
+												With you, my heart is full, and my future is bright"</p>
 										</blockquote>
 									</div>
 								</div>
@@ -370,9 +377,12 @@
 										<figure>
 											<img src="images/coup.jpg" alt="user">
 										</figure>
-										<span>Mathew &amp; Toria  <a href="#" class="twitter">2024</a></span>
+										<span style="color: #F14E95;">Toriah &amp; Mathew <a href="#" class="twitter"></a></span>
 										<blockquote>
-											<p>""</p>
+											<p>"Today, before our loved ones and the universe that brought us together, we vow to love each other unconditionally, 
+												to honor the journey we’ve shared and the one that lies ahead. We promise to be each other's strength in times of weakness,
+												laughter in moments of joy, and comfort in moments of sorrow. Together, we will build a life rooted in trust, respect, and endless devotion. 
+												Hand in hand, heart to heart, we pledge to grow, to dream, and to face every season of life as one."</p>
 										</blockquote>
 									</div>
 								</div>
@@ -483,7 +493,7 @@
         year: d.getFullYear(),
         month: d.getMonth() + 1,
         day: d.getDate(),
-        enableUtc: false
+        enableUtc: true
     });
 </script>
 
