--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>V&amp;M &mdash;2024</title>
+	<title>#TheVitamsparty2024</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Mathew & Toria 2024" />
 	<meta name="keywords" content="Love" />
@@ -74,7 +74,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-xs-2">
-					<div id="fh5co-logo"><a href="index.html"><strong>V|M 2024</strong></a></div>
+					<div id="fh5co-logo" style="color: #F14E95;"><strong>#TheVitamsParty2024</strong></div>
 				</div>
 				<div class="col-xs-10 text-right menu-1">
 					<ul>
@@ -94,7 +94,7 @@
 				<div class="col-md-8 col-md-offset-2 text-center">
 					<div class="display-t">
 						<div class="display-tc animate-box" data-animate-effect="fadeIn">
-							<h1>Mathew &amp; Toriah</h1>
+							<h1>Mathew  &amp; Toriah</h1>
 							<h2>We Are Getting Married</h2>
 							<div class="simply-countdown simply-countdown-one"></div>
 							<p><a href="#" class="btn btn-default btn-sm">Save the date</a></p>
