--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
 								<div class="item">
 									<div class="testimony-slide active text-center">
 										<figure>
-											<img src="images/coup2.jpg" alt="user">
+											<img src="images/coup2.JPG" alt="user">
 										</figure>
 										<span style="color: #F14E95;">Mathew To Toria <a href="#" class="twitter"></a></span>
 										<blockquote>
@@ -361,7 +361,7 @@
 								<div class="item">
 									<div class="testimony-slide active text-center">
 										<figure>
-											<img src="images/coup1.jpg" alt="user">
+											<img src="images/coup1.JPG" alt="user">
 										</figure>
 										<span style="color: #F14E95;">Toriah To Mathew <a href="#" class="twitter"></a></span>
 										<blockquote>
@@ -375,7 +375,7 @@
 								<div class="item">
 									<div class="testimony-slide active text-center">
 										<figure>
-											<img src="images/coup.jpg" alt="user">
+											<img src="images/coup.JPG" alt="user">
 										</figure>
 										<span style="color: #F14E95;">Toriah &amp; Mathew <a href="#" class="twitter"></a></span>
 										<blockquote>
