--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-xs-2">
-					<div id="fh5co-logo" style="color: #F14E95;"><strong>#TheVitamsParty2024</strong></div>
+					<div id="fh5co-logo" style="color: #fffdd0;"><strong>#TheVitamsParty2024</strong></div>
 				</div>
 				<div class="col-xs-10 text-right menu-1">
 					<ul>
@@ -94,8 +94,8 @@
 				<div class="col-md-8 col-md-offset-2 text-center">
 					<div class="display-t">
 						<div class="display-tc animate-box" data-animate-effect="fadeIn">
-							<h1>Mathew  &amp; Toriah</h1>
-							<h2>We Are Getting Married</h2>
+							<h1 style="color: #6f4e37; font-weight:bolder">Mathew  &amp; Toriah</h1>
+							<h2 style="color: #fffdd0;">We Are Getting Married</h2>
 							<div class="simply-countdown simply-countdown-one"></div>
 							<p><a href="#" class="btn btn-default btn-sm">Save the date</a></p>
 						</div>
@@ -110,7 +110,7 @@
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
 					<h2>Invitation</h2>
-					<h3 style="color: white;">December 21st, 2024</h3>
+					<h3 style="color: #fffdd0;">December 21st, 2024</h3>
 					<p>With hearts entwined and a promise of forever, we, Mathew and Toria, invite you to witness the beginning of a beautiful chapter in our lives.
 						Our love story has been one of joy, laughter, and unwavering devotion, and now we are ready to take this sacred step together. 
 						It would mean the world to have you with us as we exchange vows and celebrate the bond that binds us.</p>
@@ -122,8 +122,8 @@
 						<img src="images/g1.jpg" alt="groom" class="img-responsive">
 					</div>
 					<div class="desc-groom">
-						<h3>Mathew Atambi</h3>
-						<p>From the moment I met Toria, I knew my life had changed forever. She is my light, my joy, and my greatest blessing. As we take this beautiful step together, 
+						<h3 style="font-weight:bolder;">Mathew Atambi</h3>
+						<p style="color: #FFFDD0; text-align:left">From the moment I met Toria, I knew my life had changed forever. She is my light, my joy, and my greatest blessing. As we take this beautiful step together, 
 							I am filled with gratitude and excitement for the journey ahead. I can’t wait to celebrate our love surrounded by those who mean the most to us.</p>
 					</div>
 				</div>
@@ -133,8 +133,8 @@
 						<img src="images/b1.jpg" alt="groom" class="img-responsive">
 					</div>
 					<div class="desc-bride">
-						<h3>Victoria Effiom</h3>
-						<p>Mathew is my dream come true, my partner, and my best friend. With him, I have found a love that is pure, kind, and unwavering. 
+						<h3 style="font-weight: bolder;">Victoria Effiom</h3>
+						<p style="color: #FFFDD0; text-align:left;">Mathew is my dream come true, my partner, and my best friend. With him, I have found a love that is pure, kind, and unwavering. 
 							I am overjoyed to begin this new chapter with him by my side, and I look forward to sharing this special moment with all our loved ones.</p>
 					</div>
 				</div>
@@ -147,8 +147,8 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
-					<span>Our Special Events</span>
-					<h2>Wedding Events</h2>
+					<span style="color: #fffdd0; font-weight:bolder">Our Special Events</span>
+					<h2 style="color: #FFFDD0; font-weight:bolder">Wedding Events</h2>
 				</div>
 			</div>
 			<div class="row">
@@ -157,32 +157,32 @@
 						<div class="col-md-10 col-md-offset-1">
 							<div class="col-md-6 col-sm-6 text-center">
 								<div class="event-wrap animate-box">
-									<h3>Wedding Ceremony</h3>
+									<h3 style="color: #FFFDD0; font-weight:bold">Wedding Ceremony</h3>
 									<div class="event-col">
-										<i class="icon-clock" style="color: #F14E95;"></i>
-										<span>10:00 AM</span>
+										<i class="icon-clock" style="color: #fffdd0;"></i>
+										<span style="color: #FFFDD0; font-weight:bolder">10:00 AM</span>
 									</div>
 									<div class="event-col">
-										<i class="icon-calendar" style="color: #F14E95;"></i>
-										<span>Saturday 21</span>
-										<span>Dec, 2024</span>
+										<i class="icon-calendar" style="color: #fffdd0;"></i>
+										<span style="color: #fffdd0; font-weight:bolder">Saturday 21</span>
+										<span style="color: #FFFDD0; font-weight:bolder">Dec, 2024</span>
 									</div>
-									<p>ST. Joseph Catholic Chaplaincy<br>Unicross Calabar.</p>
+									<p style="font-weight: bolder; color:#FFFDD0">ST. Joseph Catholic Chaplaincy<br>Unicross Calabar.</p>
 								</div>
 							</div>
 							<div class="col-md-6 col-sm-6 text-center">
 								<div class="event-wrap animate-box">
-									<h3>Thanksgiving Mass</h3>
+									<h3 style="color: #FFFDD0; font-weight:bold">Thanksgiving Mass</h3>
 									<div class="event-col">
-										<i class="icon-clock" style="color: #F14E95;"></i>
-										<span>08:30 AM</span>
+										<i class="icon-clock" style="color: #Fffdd0;"></i>
+										<span style="color: #FFFDD0;">08:30 AM</span>
 									</div>
 									<div class="event-col">
-										<i class="icon-calendar" style="color: #F14E95;"></i>
-										<span>Sunday 22</span>
-										<span>Dec, 2024</span>
+										<i class="icon-calendar" style="color: #fffdd0;"></i>
+										<span style="color: #FFFDD0; font-weight:bolder">Sunday 22</span>
+										<span style="color: #FFFDD0; font-weight:bolder">Dec, 2024</span>
 									</div>
-									<p>ST. Joseph Catholic Chaplaincy<br>Unicross Calabar.</p>
+									<p style="color: #FFFDD0; font-weight:bolder">ST. Joseph Catholic Chaplaincy<br>Unicross Calabar.</p>
 								</div>
 							</div>
 						</div>
@@ -208,12 +208,13 @@
 							<div class="timeline-badge" style="background-image:url(images/coup.JPG);"></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
-									<h3 class="timeline-title">First We Meet</h3>
-									<span class="date" style="color: #F14E95;">December 1st, 2020</span>
+									<h3 class="timeline-title" style="color: #FFFDD0;">First We Meet</h3>
+									<span class="date" style="color: #6F4E37; font-weight:bolder">December 31st, 2020</span>
 								</div>
-								<div class="timeline-body">
-									<p>Our story began unexpectedly on the 1st of December 2020, during a hilarious Twitter thread that had us both laughing out loud and, unknowingly, inching closer together. 
-										What started as witty replies and playful banter soon blossomed into something neither of us anticipated—a connection that felt like fate</p>
+								<div class="timeline-body" style="color: #FFFDD0;">
+									<p>Our story began unexpectedly on the 31st of December 2020, during a hilarious Twitter thread that had us both laughing out loud and, unknowingly, inching closer together. 
+										What started as witty replies and playful banter soon blossomed into something neither of us anticipated—a connection that felt like fate
+									</p>
 								</div>
 							</div>
 						</li>
@@ -221,12 +222,13 @@
 							<div class="timeline-badge" style="background-image:url(images/coup2.JPG);"></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
-									<h3 class="timeline-title">In a Relationship</h3>
-									<span class="date" style="color: #F14E95;">January 14, 2021</span>
+									<h3 class="timeline-title" style="color:#FFFDD0;">Our First Date</h3>
+									<span class="date" style="color: #6F4E37; font-weight:bolder">January 14, 2021</span>
 								</div>
-								<div class="timeline-body">
-									<p>After weeks of conversations and growing fondness, we officially began dating on the 17th of January 2021. Despite Mathew’s busy schedule as a producer in a bustling radio house, 
-										we found ways to nurture our bond.</p>
+								<div class="timeline-body" style="color: #FFFDD0;">
+									<p>Our first date, on the 14th of January 2021, at Alyce-Ice Creamrey and Confectionaries, remains one of our fondest memories. Sharing scoops of joy and endless laughter eventually sprinkled with 
+									toppings Anxiety for Mathew as he decided the moment was "now or never", but despite the heavily tensed aura and some really sweaty palms,
+									this was the moment we knew we had something truly special.</p>
 								</div>
 							</div>
 						</li>
@@ -234,19 +236,23 @@
 							<div class="timeline-badge" style="background-image:url(images/coup1.JPG);"></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
-									<h3 class="timeline-title">Our First Date</h3>
-									<span class="date" style="color: #F14E95;">Febuary 18, 2021</span>
+									<h3 class="timeline-title" style="color: #FFFDD0;">In a Relationship</h3>
+									<span class="date" style="color: #6F4E37;" style="font-weight:bolder;">January 14, 2021</span>
 								</div>
-								<div class="timeline-body">
-									<p>Our first date, on the 21st of February 2021, at Alyce-Ice Ice Cream and Confectionaries, remains one of our fondest memories. Sharing scoops of joy and endless laughter,
-										 we knew we had something truly special.</p>
+								<div class="timeline-body" style="color: #FFFDD0;">
+									<p>After weeks of conversations and growing fondness, we began dating on the 14th of January 2021, even though as at said date, 
+										Mathew was unaware he was in a relationship as it existed only in Toriah's haed. This twist was due to the fact that on this day, 
+										Mathew’s intensions were made known & Toriah being Toriah accepted in her head but wasn't going to let him off that easy, leading to some extra days on the edge for Mathew
+										but despite Mathew’s busy schedule as a producer in a bustling radio house, 
+										we found ways to nurture our bond.
+									</p>
 								</div>
 							</div>
 						</li>
 			    	</ul>
 				</div>
 			</div>
-			<p class="text-center">The journey since has been nothing short of amazing,<br> and we can’t wait to continue building our forever.</p>
+			<p class="text-center" style="color: #FFFDD0; font-weight:bolder">The journey since has been nothing short of amazing,<br> and we can’t wait to continue building our forever.</p>
 		</div>
 	</div>
 
@@ -335,7 +341,7 @@
 			<div class="row">
 				<div class="row animate-box">
 					<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-						<span>Nubtial</span>
+						<span>#TheVitamsParty2024</span>
 						<h2>Vows</h2>
 					</div>
 				</div>
@@ -348,9 +354,9 @@
 										<figure>
 											<img src="images/coup2.JPG" alt="user">
 										</figure>
-										<span style="color: #F14E95;">Mathew To Toria <a href="#" class="twitter"></a></span>
+										<span style="color:#6F4E37; font-weight:bolder">Mathew To Toria <a href="#" class="twitter"></a></span>
 										<blockquote>
-											<p>"Victoria, from the moment our paths crossed, my heart knew it had found its home. 
+											<p style="color: #FFFDD0;">"Victoria, from the moment our paths crossed, my heart knew it had found its home. 
 												Today, I promise to stand by you in every season of life, to celebrate your joys, 
 												and to be your anchor in stormy seas. I vow to love you unconditionally, to cherish 
 												you endlessly, and to walk hand in hand with you, now and forever. You are my heart, 
@@ -363,9 +369,9 @@
 										<figure>
 											<img src="images/coup1.JPG" alt="user">
 										</figure>
-										<span style="color: #F14E95;">Toriah To Mathew <a href="#" class="twitter"></a></span>
+										<span style="color: #6f4e37; font-weight:bolder">Toriah To Mathew <a href="#" class="twitter"></a></span>
 										<blockquote>
-											<p>"Matthew, you are my safe haven, my guiding star, and my greatest joy. Today, I promise to love 
+											<p style="color: #FFFDD0;">"Matthew, you are my safe haven, my guiding star, and my greatest joy. Today, I promise to love 
 												you with all that I am, to honor the person you are and the dreams we share. I vow to be your 
 												unwavering support, your laughter in the quiet moments, and your partner in every adventure. 
 												With you, my heart is full, and my future is bright"</p>
@@ -377,9 +383,9 @@
 										<figure>
 											<img src="images/coup.JPG" alt="user">
 										</figure>
-										<span style="color: #F14E95;">Toriah &amp; Mathew <a href="#" class="twitter"></a></span>
+										<span style="color:#6F4E37; font-weight:bolder">Toriah &amp; Mathew <a href="#" class="twitter"></a></span>
 										<blockquote>
-											<p>"Today, before our loved ones and the universe that brought us together, we vow to love each other unconditionally, 
+											<p style="color: #FFFDD0;">"Today, before our loved ones and the universe that brought us together, we vow to love each other unconditionally, 
 												to honor the journey we’ve shared and the one that lies ahead. We promise to be each other's strength in times of weakness,
 												laughter in moments of joy, and comfort in moments of sorrow. Together, we will build a life rooted in trust, respect, and endless devotion. 
 												Hand in hand, heart to heart, we pledge to grow, to dream, and to face every season of life as one."</p>
@@ -398,8 +404,8 @@
 		<div class="container">
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-					<h2>Are You Attending?</h2>
-					<p>Please Fill-up the form to notify you that you're attending as your presence will make our day a special one.</p>
+					<h2 style="color: #fffdd0;">Are You Attending?</h2>
+					<p style="font-weight: bolder; color:#fffdd0">Please Fill-up the form to notify you that you're attending as your presence will make our day a special one.</p>
 				</div>
 			</div>
 			<div class="row animate-box">
